start/stop cooectly mongodb embedded DB